main.tf
provider "aws" {
    region = "us-east-1"
    # access_key = ""
    # secret_key = ""
}
variable "subnet_prefix" {
    description = "CIDR Block"
    # default = 
    type = string
}

resource "aws_vpc" "prod-vpc" {
    cidr_block = "10.0.0.0/16"
    tags = {
      "Name" = "production"
    }
}


resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.prod-vpc.id
    tags = {
      "Name" = "Prod-IGW"
    }
}

resource "aws_route_table" "private-rt" {
    vpc_id = aws_vpc.prod-vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }

    tags = {
      "Name" = "Prod"
    }
  
}

resource "aws_subnet" "private" {
    vpc_id = aws_vpc.prod-vpc.id
    cidr_block = var.subnet_prefix
    availability_zone = "us-east-1a"
    tags = {
      "Name" = "Private-Subnet"
    }
  
}

resource "aws_route_table_association" "private-rt-as" {
    subnet_id = aws_subnet.private.id
    route_table_id = aws_route_table.private-rt.id  
}

resource "aws_security_group" "allow-web" {
    name = "Allow web traffic"
    description = "Allow web traffic"
    vpc_id = aws_vpc.prod-vpc.id
    ingress {
        description = "HTTPS"
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "HTTP"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "SSH"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }


    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]

    }

    tags = {
      "Name" = "WEB-SG"
    }
  
}

resource "aws_network_interface" "web-server-nic" {
    subnet_id = aws_subnet.private.id
    private_ip = "10.0.1.50"
    security_groups = [aws_security_group.allow-web.id]

}

resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = aws_instance.web-server.private_ip
  depends_on = [
    aws_internet_gateway.igw
  ]
}


resource "aws_instance" "web-server" {
    ami = "ami-08c40ec9ead489470"
    instance_type = "t2.micro"
    availability_zone = "us-east-1a"
    key_name = "test"
    
    network_interface {
        device_index = 0
        network_interface_id = aws_network_interface.web-server-nic.id
    }

    user_data = <<-EOF
            #!/bin/bash
            sudo apt update -y
            sudo apt install apache2 -y
            sudo systemctl start apache2
            sudo bash -c 'echo your very first web server > /var/www/html/index.html'
            EOF


    tags = {
      "Name" = "Test"
    }


}
output "Server_ID" {
  value = aws_instance.web-server.id
}












# resource "aws_vpc" "first" {
#   cidr_block = "10.0.0.0/16"
#   tags = {
#     "Name" = "first-vpc"
#   }
# }

# resource "aws_subnet" "public" {
#   vpc_id     = aws_vpc.first.id
#   cidr_block = "10.0.1.0/24"

#   tags = {
#     Name = "Public"
#   }
# }

# resource "aws_instance" "test" {
#       ami = "ami-09d3b3274b6c5d4aa"
#       instance_type = "t2.medium"
#       tags = {
#         "Name" = "Ubuntu"
#       }
# }
